portfolio links on narrow fixed font-width bug by using bold instead of font-weight 600

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -84,7 +84,7 @@ $sanserif : Arial,sans-serif;
   font-family: $sanserif;
   font-size: 1em;
   line-height: 1em;
-  font-weight: 600;
+  font-weight: bold;
   height: 27px;
   position: absolute;
   color: #FFF;
